@@ -7,7 +7,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: util.test,v 1.7 2000/04/10 17:19:06 ericm Exp $
+# RCS: @(#) $Id: util.test,v 1.8 2001/07/03 03:33:42 hobbs Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -62,6 +62,10 @@ test util-4.4 {Tcl_ConcatObj - backslash-space at end of argument} {
 test util-4.5 {Tcl_ConcatObj - backslash-space at end of argument} {
     concat a { } c
 } {a c}
+test util-4.6 {Tcl_ConcatObj - utf-8 sequence with "whitespace" char} {
+    # Check for Bug #227512.  If this violates C isspace, then it returns \xc3.
+    concat \xe0
+} \xe0
 
 test util-5.1 {Tcl_StringMatch} {
     string match ab*c abc
