@@ -1,3 +1,9 @@
+2001-07-02  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tests/util.test: added util-4.6
+	* generic/tclUtil.c (Tcl_ConcatObj): Corrected walking backwards
+	over utf-8 chars. [Bug #227512]
+
 2001-07-02  Don Porter  <dgp@users.sourceforge.net>
 
 	* tests/unixInit.test (unixInit-2.8):  Corrected test for all
